--- a/src/pages/Print.css
+++ b/src/pages/Print.css
@@ -94,7 +94,8 @@
     margin-top: 5px;
     font-size: 16px;
     display: flex;
-    flex-wrap: wrap;
+    text-align: start;
+    word-break: break-word;
     order: 10;
 }
 
